cluster-media-apps/plex/templates/add-web-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-web
  namespace: plex
spec:
  replacePath:
    path: /web
