cluster-media-apps/plex/templates/middleware-web-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: web-redirect
  namespace: plex
spec:
  redirectRegex:
    regex: "^https://plex3\\.framsburg\\.ch/(.*)$"
    replacement: "https://plex3.framsburg.ch/web/${1}"
