cluster-media-apps/plex/templates/plex-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-plex-headers
  namespace: plex
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
