cluster-media-apps/plex/templates/replace-with-web-middleware.yaml
# Replace path with regex
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-with-web
  namespace: plex
spec:
  replacePathRegex:
    regex: ^/(.*)
    replacement: /web/$1
